--- a/index.html
+++ b/index.html
@@ -96,9 +96,31 @@
 						</div>
 						<span class="sub-title">WORK WHAT I DO DAY BY DAY</span>
 						<div class="content">
+
 							<div class="timeframe">
 								<div class="period">
-									JULY 2014 - CURRENT
+									AUG 2016 - CURRENT
+								</div>
+								<div class="achievements">
+									<h4>
+										TEABOX
+									</h4>
+									<h5>
+										SOFTWARE ENGINEER
+									</h5>
+									<p>
+										Web development, responsible for developing webpages (desktop, mobile and pad) and maintain website from scratch. Javascript, HTML, HTML5, CSS, CSS3 and Angularjs(partial) are languages
+										and framework on which I am working day to day with ownership.
+
+										<section class="paradescription">Debug, and issue fixing. Github respository maintain and work closely with Django framework (backend server).</section>
+									</p>
+								</div>
+							</div>
+
+							<hr class="headerline-thin">
+							<div class="timeframe">
+								<div class="period">
+									JULY 2014 - AUG 2016
 								</div>
 								<div class="achievements">
 									<h4>
@@ -268,11 +290,11 @@
 									CSS
 								</div>
 								<div class="skill-strenght">
-									<div class="skill seven">
+									<div class="skill eight">
 									</div>
 								</div>
 								<div class="skill-score">
-									<b>7</b> out of 10
+									<b>8</b> out of 10
 								</div>
 							</div>
 
@@ -296,11 +318,11 @@
 									BOOTSTRAP
 								</div>
 								<div class="skill-strenght">
-									<div class="skill five">
+									<div class="skill seven">
 									</div>
 								</div>
 								<div class="skill-score">
-									<b>5</b> out of 10
+									<b>7</b> out of 10
 								</div>
 
 								<div class="skill-name">
@@ -312,6 +334,17 @@
 								</div>
 								<div class="skill-score">
 									<b>5</b> out of 10
+								</div>
+
+								<div class="skill-name">
+									ReactJS
+								</div>
+								<div class="skill-strenght">
+									<div class="skill three">
+									</div>
+								</div>
+								<div class="skill-score">
+									<b>Beginner</b>
 								</div>
 							</div>
 						</div>
